examples/test/testpolicy10581.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10581
  namespace: namespace195
spec:
  podSelector:
    matchLabels:
      key26: value42
      key35: value1
      key19: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value32
          key44: value13
          key42: value46
      podSelector:
        matchLabels:
          key10: value43
